[wheel]
python-tag = py3

[metadata]
name = statsd-asgi
url = https://github.com/andrewthetechie/statsd-asgi
description = Export metrics about requests in your ASGI apps to statsd or Datadog
long_description = file: README.rst
author = Andrew Herrington
author_email = andrew.the.techie@gmail.com
license = MIT
license_files = LICENSE
keywords = asgi, statsd, datadog, starlette, fastapi
project_urls = 
	Documentation = https://github.com/andrewthetechie/statsd-asgi
	Source code = https://github.com/andrewthetechie/statsd-asgi
	Issue tracker = https://github.com/andrewthetechie/statsd-asgi/issues
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = 
	statsd_asgi
	statsd_asgi._middlewares
	statsd_asgi._utils
include_package_data = True
python_requires = >= 3.6
install_requires = 
	datadog          >= 0.41.0
setup_requires = 
    setuptools-git-versioning >= 1.3.6


[options.extras_require]
tests = 
	pytest
    pytest-cov
    pytest-mock

[tool:pytest]
addopts = --cov=pydantic_redis --cov-report=term-missing --no-cov-on-fail --cov-fail-under 95

[flake8]
max-line-length=119
exclude = docs/* test/*
