[wheel]
python-tag = py3

[metadata]
name = pydantic-aioredis
url = https://github.com/andrewthetechie/pydantic-aioredis
description = 
long_description = file: README.rst
author = Andrew Herrington
author_email = andrew.the.techie@gmail.com
license = MIT
license_files = LICENSE
keywords = pydantic, aioredis, ORM, async-io
project_urls = 
	Documentation = https://github.com/andrewthetechie/pydantic-aioredis
	Source code = https://github.com/andrewthetechie/pydantic-aioredis
	Issue tracker = https://github.com/andrewthetechie/pydantic-aioredis
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = 
	pydantic_aioredis
include_package_data = True
python_requires = >= 3.6
install_requires = 
	pydantic>=1.8.2
	aioredis>=2.0.0
setup_requires = 
    setuptools-git-versioning >= 1.3.6


[options.extras_require]
tests = 
	pytest
    pytest-cov
    pytest-mock

[tool:pytest]
addopts = --cov=pydantic_aioredis --cov-report=term-missing --no-cov-on-fail --cov-fail-under 99

[flake8]
max-line-length=119
exclude = docs/* test/*

[bandit]
exclude: tests/
